# OwnCAD

./: .gitignore  CLAUDE.md  CMakeLists.txt  File-Structure.md  README.md  TESTING_INSTRUCTIONS.md  create_package.bat  package_app.ps1  test_sample.dxf  test_shapes.dxf  test_square_100x100.dxf
include/export/: DXFWriter.h  GeometryExporter.h
include/geometry/: Arc2D.h  BoundingBox.h  Ellipse2D.h  GeometryConstants.h  GeometryMath.h  GeometryValidator.h  Line2D.h  Point2D.h  TransformValidator.h
include/import/: DXFColors.h  DXFEntity.h  DXFParser.h  GeometryConverter.h
include/model/: Command.h  CommandHistory.h  DocumentModel.h  EntityCommands.h  ExportValidator.h
include/ui/: ArcTool.h  CADCanvas.h  GridSettingsDialog.h  LineTool.h  MirrorTool.h  MoveTool.h  RectangleTool.h  RotateInputDialog.h  RotateTool.h  SelectionManager.h  Tool.h  ToolManager.h
src/: main.cpp
src/export/: DXFWriter.cpp  GeometryExporter.cpp
src/geometry/: Arc2D.cpp  BoundingBox.cpp  Ellipse2D.cpp  GeometryMath.cpp  GeometryValidator.cpp  Line2D.cpp  Point2D.cpp  TransformValidator.cpp
src/import/: DXFColors.cpp  DXFParser.cpp  GeometryConverter.cpp
src/model/: CommandHistory.cpp  DocumentModel.cpp  EntityCommands.cpp  ExportValidator.cpp
src/ui/: ArcTool.cpp  CADCanvas.cpp  GridSettingsDialog.cpp  LineTool.cpp  MirrorTool.cpp  MoveTool.cpp  RectangleTool.cpp  RotateInputDialog.cpp  RotateTool.cpp  SelectionManager.cpp  ToolManager.cpp
tasks/: 4.1-MoveTool-Implementation.md  4.2-RotateTool-Implementation.md  4.3-MirrorTool-Implementation.md  4.4-TransformValidation-Implementation.md  5.1-Command-Pattern-Architecture.md  5.2-Command-Implementations.md  5.3-CommandStack-Integration.md  5.4-UI-Integration.md  5.5-StressTesting.md  7-UI-Structure-Analysis.md  8-DXF-RoundTrip-Implementation-Guide.md  IMPLEMENTATION_SUMMARY.md  phase1.md  phase1.tasks.md  phase2.md  phase2.tasks.md  task-3-drawing-tools.md  task-3.1-line-tool.md  task-3.2-arc-tool.md
tests/geometry/: test_Arc2D.cpp  test_DuplicateDetection.cpp  test_GeometryMath.cpp  test_Intersections.cpp  test_Line2D.cpp  test_Point2D.cpp  test_TransformValidator.cpp
tests/model/: test_CommandHistory.cpp  test_DXFRoundTrip.cpp  test_DocumentModelValidation.cpp  test_EntityCommands.cpp  test_MetadataPreservation.cpp  test_UndoRedoStress.cpp
tests/ui/: test_Selection.cpp
